# Supervisor-Subordinate-pattern

./: CMakeLists.txt  README.md
Headers/: subordinate.h  supervisor.h
Src/: subordinate.cpp  supervisor.cpp
